# Quiz-Software-Simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Database.hpp  ExampleClass.h  QuizDB.hpp  Session.h  Session.hpp  User.h  User.hpp  UserDB.hpp
src/: CMakeLists.txt  Database.cpp  ExampleClass.cpp  QuizDB.cpp  Session.cpp  User.cpp  UserDB.cpp  main.cpp
tests/: CMakeLists.txt  Database_Test.cpp  QuizDB_Test.cpp  Session_Test.cpp  UserDB_Test.cpp  User_Test.cpp  User_test.cpp  test_ExampleClass.cpp
